[package]
name = "fhir-verify"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["rustls", "json", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
itertools = "0.15"
anyhow = "1.0"
regex = "1.13"
jsonpath-rust = "1.0"
comfy-table = "7.2"